Added mongo with auth in docker

--- a/Catalog.csproj
+++ b/Catalog.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1e86d898-0878-4edd-9ebb-1dc64a57f86f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
